force-app/main/default/objects/ProductType__c/ProductType__c.object-meta.xml
<CustomObject>
    <label>Product Type</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>