force-app/main/default/objects/ProductType__c/fields/NormalizedCode__c.field-meta.xml
<CustomField>
    <fullName>NormalizedCode__c</fullName>
    <label>Norm. Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>