force-app/main/default/objects/ProductType__c/fields/ProdTechGroup__c.field-meta.xml
<CustomField>
    <fullName>ProdTechGroup__c</fullName>
    <label>ProdTechGroup</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Coupling Blank</fullName>
            </value>
            <value>
                <fullName>Couplings</fullName>
            </value>
            <value>
                <fullName>ERW Pipes</fullName>
            </value>
            <value>
                <fullName>General Purpose Pipes</fullName>
            </value>
            <value>
                <fullName>Made-to-Order Pipes</fullName>
            </value>
            <value>
                <fullName>OCTG / Oil &amp; Gas / Drilling</fullName>
            </value>
            <value>
                <fullName>Railway Wheels and Components</fullName>
            </value>
            <value>
                <fullName>Semi-finished Products and Blanks</fullName>
            </value>
            <value>
                <fullName>Specialized Pipes</fullName>
            </value>
            <value>
                <fullName>Structural and Hollow Section Pipes</fullName>
            </value>
            <value>
                <fullName>Subs/Adapters</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>