force-app/main/default/objects/ProductType__c/fields/ShortName__c.field-meta.xml
<CustomField>
    <fullName>ShortName__c</fullName>
    <label>ShortName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>