force-app/main/default/objects/ProductType__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Code__c</columns>
    <columns>NormalizedCode__c</columns>
    <columns>NAME</columns>
    <columns>ShortName__c</columns>
    <columns>ProdTechGroup__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>